# slides-vqa

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: setup.sh
.github/workflows/: package.yaml  sync_hf_space.yaml  tests.yaml
api/: index.html
customization/: index.html
demo/: README.md  app.py  reboot_hf_space.py  requirements.txt  slides_qa.py  video_with_slides_qa.py
docs/: api.md  future-features-contributions.md
future-features-contributions/: index.html
getting-started/: index.html
search/: search_index.json
src/slides_vqa/: config.py  models.py  preprocess_presentation.py  preprocess_video.py
step-by-step-guide/: index.html
tests/unit/: test_preprocess_video.py
