[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "slides-vqa"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "ffmpeg-python",
  "loguru",
  "num2words",
  "git+https://github.com/huggingface/transformers@v4.49.0-SmolVLM-2",
]

[project.optional-dependencies]
demo = [
  "gradio",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/Blueprint-template/"
Issues = "https://github.com/mozilla-ai/Blueprint-template/issues"
Source = "https://github.com/mozilla-ai/Blueprint-template"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
